# open-interpreter

./: .dockerignore  .env.example  .env.sample  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .replit  CONTRIBUTING.md  Dockerfile  GPU.md  LICENSE  MACOS  README.md  README_DE.md  README_IN.md  README_JA.md  README_TW.md  README_VN .md  README_VN.md  README_ZH.md  SECURITY.md  class.md  cli.py  config.yaml  contributing.md  del.py  diskcache-5.6.1-py3-none-any.whl  docker-compose.yaml  docker-compose.yml  entrypoint.sh  file.txt  main.py  makefile  memoria.json  package-lock.json  package.json  pull_request_template.md  pyproject.toml  replit.nix  stream_out.py  (+3 more)
.circleci/: config.yml
.codeboarding/: Application_Management.md  Computer_Interaction_Layer.md  Interpreter_Core.md  System_Tools_Language_Execution.md  Terminal_User_Interface.md  on_boarding.md
.devcontainer/: DockerFile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  lint.yml  potential-duplicates.yml  python-package.yml  release-please.yml
Archivos importantes para RD-bot/: criaturas.txt  discusion_filosofica.txt  interaccion_RD-bot.docx  mystic_poetry_2023_10_20_14_36_36.txt  philosophy_of_freedom_2023_10_20_15_00_31.txt  poema.txt
archive/: bash sorta working.py  main.py  mintlify_doc_generator.py  server.txt  sound.py  tool line_numbers.py  unused_markdown.py  wtf copy.py
archive/classic_docs/: NCU_MIGRATION_GUIDE.md  SAFE_MODE.md  mint.json
archive/classic_examples/: Dockerfile  JARVIS.ipynb  README.md  screenpipe.ipynb
archive/classic_tests/: test_interpreter.py
audio-transcripts/: README
benchmarks/: simple.py
cli/: __init__.py
computer_use/: README.md  cli.py  loop.py  main.py
computer_use/misc/: desktop.py  help.py  welcome.py
computer_use/tests/: test_computer.py  test_tool_ui.py  test_tools.py  test_ui.py
computer_use/tools/: __init__.py  bash.py
computer_use/ui/: edit copy.py  edit.py  markdown.py  tool.py
docker/: Dockerfile.gpu  Dockerfile.mini  Dockerfile_mini  docker-compose.gpu.yml
docs/: CONTRIBUTING.md  GPU.md  MACOS.md  NCU_MIGRATION_GUIDE.md  README.md  README_DE.md  README_ES.md  README_IN.md  README_JA.md  README_KO.md  README_UK.md  README_VN.md  README_ZH.md  ROADMAP.md  SAFE_MODE.md  SECURITY.md  WINDOWS.md  contributing.md  desktop.md  introduction.mdx  mint.json  setting-up-gpt-4.md  setup.mdx  style.css
docs/assets/: .DS-Store
docs/code-execution/: computer-api.mdx  custom-languages.mdx  settings.mdx  usage.mdx
docs/components/: computer.mdx  core.mdx  introduction.mdx  language-model.mdx
docs/computer/: introduction.mdx  language-model-usage.mdx
docs/getting-started/: introduction.mdx  setup.mdx
docs/guides/: Multiple-Instances.py  advanced-terminal-usage.mdx  basic-usage.mdx  demos.mdx  multiple-instances.mdx  os-mode.mdx  profiles.mdx  running-locally.mdx  streaming-output.mdx  streaming-response.mdx
docs/integrations/: docker.mdx  e2b.mdx
docs/language-model-setup/: custom-models.mdx  introduction.mdx
docs/language-models/: custom-models.mdx  introduction.mdx  settings.mdx  usage.mdx
docs/legal/: license.mdx
docs/protocols/: lmc-messages.mdx
docs/safety/: best-practices.mdx  introduction.mdx  isolation.mdx  safe-mode.mdx
docs/server/: usage.mdx
docs/settings/: all-settings.mdx  example-profiles.mdx  profiles.mdx
docs/snippets/: computer-settings.mdx  interpreter-settings.mdx  language-model-settings.mdx
docs/telemetry/: telemetry.mdx
docs/troubleshooting/: faq.mdx
docs/usage/: desktop-app.mdx  examples.mdx
examples/: 01_Basic_Functionality.ipynb  02_Basic_Use_Cases.ipynb  README.md  custom_tool.ipynb  interactive_quickstart.py  jan_computer_control.ipynb  local3.ipynb  local_server.ipynb  organize_photos.ipynb  screenpipe.ipynb  stream_out.py  talk_to_your_database.ipynb
fix-enable-long-paths/: README.md  enable_long_path.cmd
installers/: new-installer.sh  oi-linux-installer.sh  oi-mac-installer.sh  oi-windows-installer-conda.ps1  oi-windows-installer.ps1
interpreter/: RD-bot_info.json  README.md  __init__.py  admin_interface.py  cli.py  code_block.py  code_interpreter.py  code_scan.py  commands.py  config.test.yaml  config.yaml  config_manager.py  código_interpreter_me_lo_dio.py  error_handler.py  exec.py  feedback_manager.py  forbidden_commands.json  get_hf_llm.py  hotkeys.py  interaction_monitor.py  interpreter.py  intreprete_test.py  json_utils.py  llama_2.py  memoria.json  message_block.py  mis_datos.json  openai_utils.py  plugin_manager.py  profiles.py  sdagency.py  server.py  settings.py  skill_extractor.py  system_message.txt  tracing.py  types.py  utils.py  utils_test.py  view.py  (+1 more)
interpreter/archive/: (wip)_model_explorer.py  cli.py  code_interpreter.py  get_hf_llm.py  interpreter.py  message_block.py  utils.py
interpreter/cli/: cli.py
interpreter/code_interpreters/: __init__.py  base_code_interpreter.py  code_function_handler.py  (+4 more)
interpreter_1/: README.md  __init__.py  cli copy.py  cli.py  interpreter.py  profiles.py  server.py
misc/: system_message_scratch_sheet.txt  unused_copy.txt
oi-audio/: Forensic-Analyst.yaml
scripts/: build_llama-cpp-python.sh  check_avx2.py  install.sh  ipkernel_warning_example.py  setup.py  shell.py  startup.sh  uninstall_shell.py  wtf.py
tests/: config.test.yaml  test_cli.py  test_interpreter.py  test_skill_extractor.py
(+448 files in other folders)
