[project]
name = "open-interpreter"
version = "1.0.0"  # Use "-rc1", "-rc2", etc. for pre-release versions
description = "A natural language interface for computers"
authors = [
    {name = "Killian Lucas", email = "killian@openinterpreter.com"},
]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "litellm>=1.52.3",
    "anthropic>=0.39.0",
    "pygments>=2.18.0",
    "pyautogui>=0.9.54",
    "fastapi>=0.115.4",
    "prompt-toolkit>=3.0.48",
    "pyte>=0.8.2",
    "screeninfo>=0.8.1",
    "readchar>=4.2.1",
    "pillow>=10.3.0",
    "uvicorn>=0.32.0",
    "pynput>=1.7.7",
    "httpx==0.27.2",
    "colorama>=0.4.6",
]

[project.scripts]
i = "interpreter.cli:main"
interpreter = "interpreter.cli:main"
interpreter-shell = "scripts.shell:main"
interpreter-uninstall-shell = "scripts.uninstall_shell:main"
wtf = "scripts.wtf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["interpreter", "scripts"]

[tool.black]
target-version = ["py311"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true